// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`withLayout is rendered correctly 1`] = `
<Component
  classes={
    Object {
      "component": "withLayout-component-2",
      "section": "withLayout-section-1",
    }
  }
/>
`;

exports[`withLayout is rendered correctly 2`] = `
<Component
  classes={
    Object {
      "component": "withLayout-component-4",
      "section": "withLayout-section-3",
    }
  }
/>
`;
